--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "mongoose-function",
-  "version": "0.1.0",
-  "description": "Function storage for Mongoose",
+  "version": "0.2.0",
+  "description": "Function storage for Mongoose - OSRS version - better support for opts.toFunction",
   "main": "index.js",
   "scripts": {
     "test": "make test"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/aheckmann/mongoose-function.git"
+    "url": "git@github.com:OneStepRetailSolutions/mongoose-function.git"
   },
   "keywords": [
     "mongoose",
@@ -19,7 +19,7 @@
     "schematype",
     "schema"
   ],
-  "author": "Aaron Heckmann <aaron.heckmann+github@gmail.com>",
+  "author": "changes by Andrew Gallagher (agallagher@onestepretai..com)",
   "license": "MIT",
   "devDependencies": {
     "mocha": "*",
