--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongoose-function",
-  "version": "0.2.0",
-  "description": "Function storage for Mongoose - OSRS version - better support for opts.toFunction",
+  "version": "0.2.1",
+  "description": "Function storage for Mongoose - OSRS version - better support for opts.toFunction, and opts.isLocalFunction",
   "main": "index.js",
   "scripts": {
     "test": "make test"
@@ -19,7 +19,7 @@
     "schematype",
     "schema"
   ],
-  "author": "changes by Andrew Gallagher (agallagher@onestepretai..com)",
+  "author": "changes by Andrew Gallagher (agallagher@onestepretail.com)",
   "license": "MIT",
   "devDependencies": {
     "mocha": "*",
